templates/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: shrijanab/blog-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
